# deped-base

./: .gitignore  AGENTS.md  README.md  debug_unpivot.py  env.example  justfile  nb.ipynb  pyproject.toml  zensical.toml
.github/workflows/: ci.yml
data/: 2025-10-13-psgc.xlsx  2025-12-06-geo-k12-deped.csv  2025-12-20-geo-k12-deped.csv  fixes.yml  generic.yml  regions.yml
docs/: brgy_names.md  enrolment_origin.md  extraction_rules.md  index.md  plugins.md  schema-teachers.md  schema.md
docs/plugins/: address.md  dropouts.md  enrollment.md  geodata.md  hr.md  matching.md  psgc.md  regions.md
prompts/: POLARS_MIGRATION.md  REFACTOR.md
src/foundation/: __init__.py  __main__.py  apply_fixes.py  clean_location_names.py  clean_school_names.py  common.py  extract_brgy.py  extract_dataframes.py  extract_enrollment.py  extract_geodata.py  extract_meta.py  extract_muni.py  extract_province.py  extract_psgc.py  extract_region.py  match_psgc_schools.py  normalize.py  pipeline.py  plugin.py  registry.py  reorder_columns.py  schema.py
src/foundation/loaders/: __init__.py  enrollment.py
src/foundation/plugins/: __init__.py  address.py  dropouts.py  geodata.py  hr.py  meta.py  psgc.py  regions.py
src/foundation/transforms/: __init__.py  location.py  normalize.py  reorder.py
tests/: conftest.py  test_cli.py  test_common.py  test_extract_dataframes.py  test_extract_geodata.py  test_extract_meta.py  test_extract_psgc.py  test_plugins_dropouts.py  test_plugins_hr.py  test_plugins_matching.py  test_plugins_meta.py  test_plugins_region_names.py  test_version.py
(+6 files in other folders)
