[project]
name = "foundation"
requires-python = ">= 3.14.2"
description = "DepEd Project Bukas enrollment datasets + Philippine Standard Geographic Code (PSGC) + geocoordinates."
authors = [
  {name="Marcelino Veloso III", email="hi@mv3.dev" }
]
version = "0.0.1"
dependencies = [
    # config
    "environs>=14.3.0",
    # format logs
    "rich>=14.2",
    # data processing (polars primary, pandas for compatibility)
    "polars>=0.20.13",
    "openpyxl>=3.1.5",
    # db setup
    "sqlite-utils>=3.39",
    # docs
    "zensical>=0.0.13",
    "fastexcel>=0.18.0",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    # handle notebooks
    # "jupyter>=1.1.1",
    # "notebook>=7.4.3",
    # "ipykernel>=6.30.1",
    # testing
    "pytest>=9.0",
    "pytest-cov>=5.0",
]

[project.scripts]
cli = "foundation:remake"

[tool.uv]
package = true

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra -q -vv --cov --doctest-modules"
testpaths = ["tests", "src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["F401", "F403", "E501"]
fixable = ["F", "E", "W", "I001"]
select = ["F", "E", "W", "I001"]
